--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.6.2'
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.squareup.retrofit2:converter-gson:2.6.1'
+//    implementation 'io.moquette:moquette-netty-parser:0.8.1'
+//    implementation 'io.moquette:moquette-broker:0.8.1'
+//    implementation 'io.moquette:moquette-parser-commons:0.8.1'
 }
